--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -20,18 +20,8 @@
             android:layout_width="100dp"
             android:src="@drawable/done_all_black"
             android:layout_height="100dp"
+            android:layout_weight="1.5"
             android:layout_gravity="center_horizontal" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.2"
-            android:fontFamily="monospace"
-            android:gravity="center"
-            android:text="QUOTE"
-            android:textColor="@color/black"
-            android:textSize="34dp"
-            android:textStyle="italic" />
 
 
         <EditText
@@ -66,20 +56,15 @@
             android:inputType="textPassword"
             />
 
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.7"
-            android:text="Remember me." />
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="80dp"
             android:gravity="center"
-            android:text="SIGN IN"
-            app:backgroundTint="#44869A"
+            android:text="LOG IN"
+            app:backgroundTint="#000000"
             app:cornerRadius="10dp"
             android:layout_weight="1.2"/>
 
