--- a/app/src/main/res/layout/fragment_habit.xml
+++ b/app/src/main/res/layout/fragment_habit.xml
@@ -1,15 +1,37 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<!-- fragment_water_intake.xml -->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HabitFragment">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ProgressBar
+        android:id="@+id/waterProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="habit"
-        android:gravity="center"/>
+        android:layout_height="wrap_content"
+        android:progressTint="#007ACC"
+        android:layout_centerVertical="true"
+        android:layout_margin="16dp"
+        android:max="15"
+        android:progress="0" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/addWaterButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/waterProgressBar"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="@color/black"
+        android:layout_marginTop="16dp"
+        android:text="ADD WATER (200ML)" />
+
+    <Button
+        android:id="@+id/resetButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/addWaterButton"
+        android:backgroundTint="@color/black"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="RESET" />
+
+</RelativeLayout>
