--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,59 +1,71 @@
 <!-- profile_fragment.xml -->
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/qwe"
+    android:id="@+id/profileContainer"
     android:layout_height="match_parent">
 
-    <!-- TextViews to display user information -->
-    <TextView
-        android:id="@+id/profileNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:text="Name:"
-        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/profileSurnameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/profileNameTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="Surname:"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/profileNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="50dp"
+            android:text="Name:"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/profileEmailTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/profileSurnameTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="Email:"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/profileSurnameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:layout_below="@id/profileNameTextView"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="50dp"
+            android:text="Surname:"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/profilePhoneTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/profileEmailTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="Phone:"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/profileEmailTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:layout_below="@id/profileSurnameTextView"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="50dp"
+            android:text="Age:"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    <!-- Button to navigate to the update profile fragment -->
-    <Button
-        android:id="@+id/asd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/profilePhoneTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:text="Update Profile" />
+        <TextView
+            android:id="@+id/profilePhoneTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:layout_below="@id/profileEmailTextView"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="50dp"
+            android:text="Phone:"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/updateProfile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/profilePhoneTextView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="@color/black"
+            android:text="UPDATE"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF" />
+
 </RelativeLayout>
