--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -19,7 +19,7 @@
     <item
         android:id="@+id/habit"
         android:title="Habits"
-        android:icon="@drawable/nav_home"/>
+        android:icon="@drawable/bot_habit"/>
 
 
     <item
