--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -6,9 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".LogIn"
-    android:backgroundTintMode="screen"
-    >
-
+    android:backgroundTintMode="screen">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,20 +16,19 @@
 
         <ImageView
             android:layout_width="100dp"
-            android:src="@drawable/done_all_black"
             android:layout_height="100dp"
+            android:layout_gravity="center_horizontal"
             android:layout_weight="1.5"
-            android:layout_gravity="center_horizontal" />
-
+            android:src="@drawable/done_all_black" />
 
         <EditText
             android:id="@+id/logInEmail"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1.2"
-            android:gravity="left|center_vertical"
             android:background="@drawable/custom_edittext"
+            android:gravity="left|center_vertical"
+            android:layout_marginTop="20dp"
             android:padding="8dp"
             android:hint="Email"
             android:drawableLeft="@drawable/ic_baseline_person_24"
@@ -53,34 +50,30 @@
             android:drawablePadding="8dp"
             android:gravity="left|center_vertical"
             android:hint="Password"
-            android:inputType="textPassword"
-            />
+            android:inputType="textPassword" />
 
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="LOG IN"
             app:backgroundTint="#000000"
             app:cornerRadius="10dp"
-            android:layout_weight="1.2"/>
-
-
+            android:layout_weight="1.2" />
 
         <TextView
             android:id="@+id/textCreateAccount"
-            android:layout_marginTop="4dp"
             android:layout_width="match_parent"
-            android:gravity="center_horizontal"
             android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="4dp"
+            android:gravity="center_horizontal"
             android:text="Don't have an account. Create one."
             android:layout_weight="0.8"
             android:textStyle="bold" />
 
     </LinearLayout>
-
 </LinearLayout>
